# cedar4j

./: .gitignore  LICENSE  PLAN.md  Readme.md  pom.xml
.github/workflows/: ci.yml
core/: pom.xml
core/src/main/java/io/roastedroot/cedar4j/: AuthorizationRequest.java  AuthorizationResponse.java  CacheResponse.java  CedarEngine.java  CedarEnginePool.java  CedarException.java  CedarRawEngine.java  CedarWasm.java  Decision.java  DetailedError.java  Entity.java  EntityUID.java  EntityValidationRequest.java  EntityValidationResponse.java  ExtensionFunction.java  PartialAuthorizationRequest.java  PartialAuthorizationResponse.java  Policy.java  PolicySet.java  Schema.java  TemplateLink.java  ValidationError.java  ValidationRequest.java  ValidationResponse.java
core/src/test/java/io/roastedroot/cedar4j/: CedarEnginePoolTest.java  CedarEngineTest.java  CedarExtensionTest.java  CedarIntegrationTest.java
wasm-build/: Cargo.toml  Makefile
wasm-build/cedar-patch/: host.rs
wasm-build/src/: lib.rs
